manifests/default/cortex-webapp/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cortex-webapp
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  rules:
  - host: cortex.bharatradar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cortex-webapp
            port:
              number: 8081
